@@ -1,4 +1,5 @@
 AM_CPPFLAGS=-I ${top_srcdir}/libutil++ -I ${top_srcdir}/libutil
+AM_CXXFLAGS = @OP_CXXFLAGS@
 
 noinst_LIBRARIES = libopt++.a
 libopt___a_SOURCES = popt_options.cpp popt_options.h
